<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.alipay.mobile.antui.basic.AUTitleBar
        android:id="@+id/title_atb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.alipay.mobile.antui.basic.AUButton
                android:id="@+id/multi_style_rotation_btn"
                style="@com.alipay.mobile.antui:style/mainButtonStyle"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:text="@string/rotation" />

            <com.alipay.mobile.antui.basic.AUButton
                android:id="@+id/multi_style_list_btn"
                style="@com.alipay.mobile.antui:style/mainButtonStyle"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:clickable="true"
                android:text="@string/list" />

            <com.alipay.mobile.antui.basic.AUButton
                android:id="@+id/multi_style_banner_btn"
                style="@com.alipay.mobile.antui:style/mainButtonStyle"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:clickable="true"
                android:text="@string/banner" />

            <com.alipay.mobile.antui.basic.AUButton
                android:id="@+id/multi_style_announcement_btn"
                style="@com.alipay.mobile.antui:style/mainButtonStyle"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:clickable="true"
                android:text="@string/announcement" />

            <com.alipay.mobile.antui.basic.AUButton
                android:id="@+id/multi_style_splash_btn"
                style="@com.alipay.mobile.antui:style/mainButtonStyle"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:clickable="true"
                android:text="@string/splash" />

            <com.alipay.mobile.antui.basic.AUButton
                android:id="@+id/multi_style_h5_btn"
                style="@com.alipay.mobile.antui:style/mainButtonStyle"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:clickable="true"
                android:text="@string/h5_popup" />

            <com.alipay.mobile.antui.basic.AUButton
                android:id="@+id/multi_style_h5_native_btn"
                style="@com.alipay.mobile.antui:style/mainButtonStyle"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:clickable="true"
                android:text="@string/h5_popup_native" />


            <com.alipay.mobile.antui.basic.AUButton
                android:id="@+id/multi_style_announcement_best_practice"
                style="@com.alipay.mobile.antui:style/mainButtonStyle"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:clickable="true"
                android:text="公告类型最佳实践" />

            <com.alipay.mobile.antui.basic.AUButton
                android:id="@+id/multi_style_single_best_practice"
                style="@com.alipay.mobile.antui:style/mainButtonStyle"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:clickable="true"
                android:text="单行类型最佳实践" />

            <com.alipay.mobile.antui.basic.AUButton
                android:id="@+id/multi_style_banner_best_practice"
                style="@com.alipay.mobile.antui:style/mainButtonStyle"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:clickable="true"
                android:text="轮播类型最佳实践" />

        </LinearLayout>

    </ScrollView>


    <com.alipay.mobile.antui.basic.AUButton
        android:id="@+id/multi_style_lottie"
        style="@com.alipay.mobile.antui:style/mainButtonStyle"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:text="@string/lottie_ad" />
    <com.alipay.mobile.antui.basic.AUButton
        android:id="@+id/multi_style_gif"
        style="@com.alipay.mobile.antui:style/mainButtonStyle"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:text="@string/mcdp_demo_style_gif" />
    <com.alipay.mobile.antui.basic.AUButton
        android:id="@+id/multi_style_float_con"
        style="@com.alipay.mobile.antui:style/mainButtonStyle"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:text="@string/mcdp_demo_style_float_icon" />

    <com.alipay.mobile.antui.basic.AUButton
        android:id="@+id/multi_style_space_words"
        style="@com.alipay.mobile.antui:style/mainButtonStyle"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:text="@string/mcdp_demo_style_float_icon" />

</LinearLayout>